src/components/pages/Home.css
@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap');

.header-home {
    color:rgb(133, 224, 224);
    font-family: 'Press Start 2P', cursive;
    text-align: center;
    border: 0.3rem;
    border-color: black;
    border-style: solid;
    border-radius: 4%;
    background: rgb(2,0,36);
    background: linear-gradient(90deg, rgba(2,0,36,1) 2%, rgba(0,81,176,1) 30%, rgba(9,47,121,0.7539390756302521) 100%);
}

.header-home:after {
    color:white;
    font-family: "Lucida Console", "Courier New", monospace;
    font: "Courier New";
    height: 2em;
    width: 50em;
    display: block;
    content: "";
    font-size: 8px;
    float: right;
    background: rgb(2,0,36);
    background: linear-gradient(90deg, rgba(2,0,36,1) 2%, rgba(0,81,176,1) 30%, rgba(9,47,121,0.7539390756302521) 100%);
    -moz-transform:    scaleX(-1); /* Gecko */
    -o-transform:      scaleX(-1); /* Opera */
    -webkit-transform: scaleX(-1); /* Webkit */
    transform:         scaleX(-1); /* Standard */
    filter: FlipH;                 /* IE 6/7/8 */
}

.profile-image {
    filter: sepia();
}

.background {
    background-color:dimgrey; 
    margin-left: 30%;
}

.intro-blurb {
    font-family: 'Rubik Dirt', cursive;
    font-size: 40px;
}

.scaled {
    filter:invert();
    transform: scale(0.8);

}

.player-rocks-info {
    margin-top: 5em;
    color: white;
    font-family: 'Rubik Dirt', cursive;
    font-size: 40px;

}
.eric-info {
    height: 100%;
    background-color: gray;
    border: 5px solid black;
    margin-top: 5em;
    color: rgb(51, 18, 236);
    font-family: 'Rubik Dirt', cursive;
    font-size: 40px;
    z-index: +1;

}

.back-to-top {

    position:fixed;
    left:50%;
    top: 90%
}

.skills {
    border: 5px solid black;
    height: 100%;

}
.skill-item {
    border: 5px solid black;

}
.thumb {
    filter:opacity(100%);
    transition: all 1s linear;
}
.opacity {
    filter:opacity(50%);
    transition: all 1s linear;
}
.space {
    margin-top: 2rem;

}
.scaling {
    height:2rem;
    width:2rem;
    margin-right:10%
}

.scrolldown {
    margin-left: 10%;
    margin-right: 10%
}

.scrolldown2 {
    margin-left: 2%;
    margin-right: 2%
}

.scrolldown3 {
    margin-left: 5%;
    margin-right: 5%
}

.dot {
    height: 25px;
    width: 25px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    margin-right: 2px
  }
  .flex {
    display: flex;
    flex-direction: row;
  }

  .home-main {


  }
  .b {

    border: 5px solid black;

  }
@media only screen and (max-width: 768px) {
    .scaled {
        width:100%
    }
    .profile-image {
        width:100%;
    }
    .home-main {
width:100%;
    
    }
}

